--- a/tool/maven/pom.xml
+++ b/tool/maven/pom.xml
@@ -6,7 +6,7 @@
   <!-- artifact coordinates -->
   <groupId>org.github.evenjn</groupId>
   <artifactId>yarn</artifactId>
-  <version>0.3.0</version>
+  <version>0.4.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <!-- product info -->
   <name>Yarn</name>
