--- a/tool/maven/pom.xml
+++ b/tool/maven/pom.xml
@@ -46,6 +46,14 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  <!-- dependencies -->
+  <dependencies>
+    <dependency>
+      <groupId>org.github.evenjn</groupId>
+      <artifactId>lang</artifactId>
+      <version>0.1.0-SNAPSHOT</version>
+    </dependency>
+  </dependencies>
   <!-- basic build configuration -->
   <build>
     <plugins>
