--- a/tool/maven/pom.xml
+++ b/tool/maven/pom.xml
@@ -6,7 +6,7 @@
   <!-- artifact coordinates -->
   <groupId>org.github.evenjn</groupId>
   <artifactId>yarn</artifactId>
-  <version>0.9.0-SNAPSHOT</version>
+  <version>0.9.0</version>
   <packaging>jar</packaging>
   <!-- product info -->
   <name>Yarn</name>
@@ -51,7 +51,7 @@
     <dependency>
       <groupId>org.github.evenjn</groupId>
       <artifactId>lang</artifactId>
-      <version>0.1.0-SNAPSHOT</version>
+      <version>0.1.0</version>
     </dependency>
   </dependencies>
   <!-- basic build configuration -->
