--- a/tool/maven/pom.xml
+++ b/tool/maven/pom.xml
@@ -3,12 +3,10 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <!-- artifact coordinates -->
   <groupId>org.github.evenjn</groupId>
   <artifactId>yarn</artifactId>
-  <version>0.10.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>jar</packaging>
-  <!-- product info -->
   <name>Yarn</name>
   <description>Interfaces that enable folding and unfolding with state and resources.</description>
   <url>https://github.com/evenjn/yarn</url>
@@ -46,15 +44,13 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-  <!-- dependencies -->
   <dependencies>
     <dependency>
       <groupId>org.github.evenjn</groupId>
       <artifactId>lang</artifactId>
-      <version>0.2.0-SNAPSHOT</version>
+      <version>1.0.0</version>
     </dependency>
   </dependencies>
-  <!-- basic build configuration -->
   <build>
     <plugins>
       <plugin>
@@ -95,7 +91,6 @@
     </plugins>
   </build>
   <profiles>
-    <!-- release build configuration -->
     <profile>
       <id>release</id>
       <build>
